--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
