--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
+    "@google/genai": "^1.24.0",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
