--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jspdf": "^3.0.3",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
+    "posthog-js": "^1.275.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
